--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "beberlei/assert": "^3.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
