--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,10 @@
         "psr-4": {
             "Helhum\\UnitTesting\\Tests\\": "tests/"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-develop": "12.0.x-dev"
+        }
     }
 }
